# ChangeLog for dev-haskell/gtk2hs
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/gtk2hs/ChangeLog,v 1.49 2009/02/10 19:32:40 kolmodin Exp $

  10 Feb 2009; Lennart Kolmodin <kolmodin@gentoo.org>
  +files/gtk2hs-0.9.12.1-librsvg-2.22.3.patch, gtk2hs-0.9.12.1.ebuild:
  Support >=gnome-base/librsvg-2.22.3 with its slightly changed API.
  Patch from upstream, unconditionally patching, see bug #240704.
  Reported by Paulo Jorge de Oliveira Cantante de Matos <pocmatos@gmail.com>,
  handled by Sebastian Magrí <sebasmagri@gmail.com>.

  05 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  16 Jul 2008; Raúl Porcel <armin76@gentoo.org> gtk2hs-0.9.11.ebuild,
  gtk2hs-0.9.12.ebuild, gtk2hs-0.9.12.1.ebuild:
  Fix mozilla deps again, bug #230670

  28 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Duncan Coutts (dcoutts) from metadata.xml (as per #85695).

  04 May 2008; Lennart Kolmodin <kolmodin@gentoo.org>
  -files/gtk2hs-0.9.10-cflags.patch, -files/gtk2hs-0.9.10-ghc622.patch,
  -files/gtk2hs-0.9.10-store.patch, gtk2hs-0.9.12.ebuild:
  Remove unused patches, and fix a ebuild.minorsyn.

  04 May 2008; Lennart Kolmodin <kolmodin@gentoo.org>
  gtk2hs-0.9.12.1.ebuild:
  Add Duncan Coutts' fix when using haddock 0.9.
  This should close bug #220185.

  17 Mar 2008; Raúl Porcel <armin76@gentoo.org> gtk2hs-0.9.11.ebuild,
  gtk2hs-0.9.12.ebuild, gtk2hs-0.9.12.1.ebuild:
  Fix deps for net-libs/xulrunner and www-client/mozilla-firefox

  26 Jan 2008; Duncan Coutts <dcoutts@gentoo.org> -gtk2hs-0.9.10-r1.ebuild,
  gtk2hs-0.9.12.1.ebuild:
  Remove old version fixing bug #207435. Also add dev-util/pkgconfig dep,
  fixing bug #206023.

  20 Jan 2008; Christoph Mende <angelos@gentoo.org> gtk2hs-0.9.12.1.ebuild:
  Stable on amd64 wrt bug #205272

  12 Jan 2008; Markus Meier <maekke@gentoo.org> gtk2hs-0.9.12.1.ebuild: