@@ -1,5 +1,5 @@
 AUX gtk2hs-0.9.12.1-librsvg-2.22.3.patch 335 RMD160 cf96ef312fda9388a3d4cf28058ffa004ebd2b77 SHA1 2908e21aa9bc8e28d61d410f8b8570ad30a59f7f SHA256 e8e4adb06d915a0c1300a3b4bf597930bd20ba5fd7bd7f9121fc999ccf855577
 DIST gtk2hs-0.9.12.1.tar.gz 1004661 RMD160 cd658027ed91b9550915e686d546e36b1b371c10 SHA1 a85f8568aa072e0c55da5889b2aabff92b8da3ae SHA256 4278078b786202fc64f86881c2b2517bdd589d5248bff2e9b7e6c1ffd2361f84
-EBUILD gtk2hs-0.9.12.1.ebuild 3465 RMD160 e821c1f6b4d58094cd4a21e75b7cdaf4ab049242 SHA1 5d5fa1e483ecf3577cf84e42e387698df1e3e2c9 SHA256 19492fe86fe8dd76757ae4baf6a55b832a871497fcf4c253fb5cfca677255125
-MISC ChangeLog 7167 RMD160 d392d3375767297038379653cb82669c051f54f9 SHA1 c3a47c6d0a5db1a42a2a42cf9cb61573eb44b961 SHA256 d4bfcb2c7c9be999c4f0ee98f381b9e491c06ba9d8d80d1da34480a8cd77098d
+EBUILD gtk2hs-0.9.12.1.ebuild 3330 RMD160 1425455421521d0a1e28d1997d0cd166cfa730ee SHA1 bc3098af6795319747f58aa41c3b2bba05fd093e SHA256 cde22f4397333f12d6ece91e9e0ba9deecd7d107c006504d888e5434a510eaf1
+MISC ChangeLog 7355 RMD160 635a21a79af40bb88e1d207d4374afb9b6b504de SHA1 a2559138918ac1366c4d2929e8582afee1f0ea09 SHA256 17746d5ee1478b5f3c02b6f26dc0bb592a2acca7ab96cc5b227e681121c8f99f
 MISC metadata.xml 264 RMD160 d289d41d1d04ed1c3e574a29f53999457dbdc52c SHA1 475c909ed389f5e0508b5cd8e1373db2b96ce75b SHA256 743889dc0a1fac66b79afe2bbc2e61338d1d467aabc7b29977885d61c94a2a82
